Add admin login and select login_info API. Delete redundant file.
